# src/backend/src/routes/search.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { globalSearchHandler } from '../controllers/searchController';
+
+const router = Router();
+
+router.get('/search', globalSearchHandler);
+
+export default router;
